# Tong

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  ast_hello.json  debug_lexer.py  requirements.txt  setup.ps1  setup.sh  tong.py  tong_spec.md
.github/workflows/: ci.yml
doc/: tong_language_requirements.md  typing_guide.md
doc/user_guide/: tong_user_guide.md
docs/: _config.yml  index.md
examples/: advanced.tong  args_demo.tong  array_update_sugar.tong  arrays.tong  function.tong  function_call.tong  hello.tong  logic_not.tong  logic_short_circuit.tong  math.tong  nbody.tong  parallel.tong  tensor.tong  test_parse.tong  tmp_args.tong
examples/ansibench/: coremark.tong  dhrystone.tong  dhrystone_full.tong  hint.tong  linpack.tong  nbench.tong  stream.tong  whetstone.tong
examples/expected/: 01_create.out  02_tensor_constructor.out  03_elementwise.out  04_dot.out  05_matmul_basic.out  06_transpose.out  07_set_immutability.out  08_chain_ops.out  09_errors.out  advanced.out  args_demo.out  array_update_sugar.out  arrays.out  constructor_partial.out  data_types.out  function_clause_patterns.out  hello.out  (+15 more)
rust/: README.md
rust/tong/: Cargo.toml  build.rs
rust/tong/src/: lexer.rs  main.rs  parser.rs  runtime.rs
rust/tong/tests/: examples.rs  expr_blocks_indexing.rs  index_oob.rs
scripts/: check_examples.ps1  check_examples.sh  gen_expected.ps1  gen_expected.sh  repl_smoke.ps1  repl_smoke.sh  run_examples.ps1  run_examples.py  run_examples.sh
src/: __init__.py  ast_dump.py  ast_nodes.py  interpreter.py  lexer.py  parser.py  repl.py
(+77 files in other folders)
